--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vechain/connex-driver": "^2.0.12",
+    "@vechain/connex-framework": "^2.0.12",
+    "@vechain/web3-providers-connex": "^1.1.2",
     "@vitejs/plugin-react": "^4.0.3",
+    "cors": "^2.8.5",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "express": "^4.18.2",
+    "express-json-rpc-router": "^1.4.0",
+    "rpc-websockets": "^7.5.1",
+    "thor-devkit": "^2.0.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
