--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/vision": "^4.0.2",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "nodemon": "^3.0.1",
     "npm": "^10.2.0"
