--- a/package.json
+++ b/package.json
@@ -13,7 +13,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "web3": "^4.1.2"
+    "web3": "^4.1.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@vechain/hardhat-ethers": "^0.1.4",
+    "@vechain/hardhat-vechain": "^0.1.4",
+    "@vechain/web3-providers-connex": "^1.1.2",
+    "hardhat": "^2.12.6",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.1",
+    "typechain": "^8.1.0"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.7.2",
@@ -34,6 +49,17 @@
     "rpc-websockets": "^7.5.1",
     "thor-devkit": "^2.0.7",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@typechain/ethers-v6": "^0.4.3",
+    "@types/chai": "^4.3.6",
+    "@types/mocha": "^10.0.2",
+    "@types/node": "^20.8.3",
+    "chai": "^4.3.10",
+    "ethers": "^6.7.1",
+    "ganache-cli": "^6.12.2",
+    "hardhat": "^2.13.0",
+    "ts-node": "^10.9.1"
   }
 }
